# TVL_GPU_DEVEL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cuda_try.cuh  main.cu  tvlintrin.hpp  utils.cuh
static/: tvl_static.hpp
static/simd/: simd_primitive_concepts.hpp  simd_type.hpp  simd_type_concepts.hpp
static/utils/: preprocessor.hpp  type_concepts.hpp  type_helper.hpp
tests/: calc_cuda.cu  compact_cuda.cu  compare_cuda.cu  cuda_test_utils.cuh
